Archive2/b0/51f1297aa71112/output
main.cpp: In function 'int main()':
main.cpp:16:5: error: 'Somma' was not declared in this scope
     Somma = num1 + num2
     ^
main.cpp:17:5: error: expected ';' before 'cout'
     cout << "il risultato e:" <<somma;
     ^
