Archive2/b0/51f1297aa71112/main.cpp
#include <iostream>

using namespace std;

int main()
{
    
    int num1;
    int num2;
    int somma;
    
    cout << "Inserire il Numero: ";
    cin >> num1;
    cout << endl <<"inserire il secondo numero: ";
    cin >> num2;
    Somma = num1 + num2
    cout << "il risultato e:" <<somma;
    return 0;

    
}